# microflash

./: .travis.yml  README.md  mb-device.c  mb-device.h  mb-file.c  mb-file.h  mb-monitor.c  mb-monitor.h  meson.build  mf-program-dialog.c  mf-program-dialog.h  mf-window.c  mf-window.h  mf-window.ui  microbit-decode.c  microflash.appdata.xml  microflash.c  microflash.desktop  microflash.gresource.xml  microflash.mime.xml.in
.github/workflows/: build.yaml
debian/: control  rules
its/: shared-mime-info.its  shared-mime-info.loc
po/: LINGUAS  POTFILES  de.po  es.po  fr.po  it.po  meson.build  pl.po  pt.po  ru.po  zh_CN.po
src/: mb-device.c  mb-file.c  meson.build  mf-program-dialog.c  mf-program-dialog.ui  mf-window.c  mf-window.h  mf-window.ui  microflash.c
